compiler/testData/checkerWithErrorTypes/quick/LValueAssignment.jet
namespace lvalue_assignment

open class B() {
    var b: Int = 2
    val c: Int = 34
}

class C() : B() {
    var x = 4
    fun foo(c: C) {
        this.x = 34
        this.b = 123
        super.b = 23
        <!VAL_REASSIGNMENT!>this.c<!> = 34
        <!VAL_REASSIGNMENT!>super.c<!> = 3535

        <!VARIABLE_EXPECTED!>getInt()<!> = 12
    }

    fun bar(c: C) {
        <!VARIABLE_EXPECTED!>this<!> = c  //should be an error
    }
}

fun getInt() = 0

class D() {
    class B() {
        fun foo() {
            <!VARIABLE_EXPECTED!>this@D<!> = D()
        }
    }
}

fun cannotBe(var i: Int) {
    <!UNRESOLVED_REFERENCE!>z<!> = 30;
    <!VARIABLE_EXPECTED!>()<!> = ();

    (<!VARIABLE_EXPECTED!>i <!USELESS_CAST!>as<!> Int<!>) = 34
    (<!VARIABLE_EXPECTED!>i is Int<!>) = false
    <!VARIABLE_EXPECTED!>A()<!> = A()
    <!VARIABLE_EXPECTED!>5<!> = 34
}

fun canBe(var i: Int, val j: Int) {
    (i: Int) = 36
    (@label i) = 34

    (<!VAL_REASSIGNMENT!>j<!>: Int) = 36
    (@label <!VAL_REASSIGNMENT!>j<!>) = 34

    val a = A()
    (@ a.a) = 3894
}

class A() {
    var a: Int = 3
}

class Test() {
    fun testIllegalValues() {
        <!VARIABLE_EXPECTED!>1<!> += 23
        (<!VARIABLE_EXPECTED!>1<!> : Int) += 43
        (@l <!VARIABLE_EXPECTED!>1<!>) += 23

        <!VARIABLE_EXPECTED!>getInt()<!> += 343
        (@f <!VARIABLE_EXPECTED!>getInt()<!>) += 343
        (<!VARIABLE_EXPECTED!>getInt()<!> : Int) += 343

        <!VARIABLE_EXPECTED!>1<!>++
        (@r <!VARIABLE_EXPECTED!>1<!>)++
        (<!VARIABLE_EXPECTED!>1<!> : Int)++

        <!VARIABLE_EXPECTED!>getInt()<!>++
        (@m <!VARIABLE_EXPECTED!>getInt()<!>)++
        (<!VARIABLE_EXPECTED!>getInt()<!> : Int)++

        this<!UNRESOLVED_REFERENCE!>++<!>

        var s : String = "r"
        s += "ss"
        s += this
        s += (@a 2)
    }

    fun testVariables() {
        var a: Int = 34
        val b: Int = 34

        a += 34
        (@l a) += 34
        (a : Int) += 34

        <!VAL_REASSIGNMENT!>b<!> += 34
        (@l <!VAL_REASSIGNMENT!>b<!>) += 34
        (<!VAL_REASSIGNMENT!>b<!> : Int) += 34
        (<!VAL_REASSIGNMENT!>b<!>) += 3

        a++
        (@ a)++
        (a : Int)++
        (a)++
    }

    fun testArrays(a: Array<Int>, ab: Ab) {
        a[3] = 4
        a[4]++
        a[6] += 43

        <!VARIABLE_EXPECTED!>ab.getArray()<!>[54] = 23
        <!VARIABLE_EXPECTED!>ab.getArray()<!>[54]++

        (@f a)[3] = 4
        (a : Array<Int>)[4]++
        (<!VARIABLE_EXPECTED!>ab.getArray()<!> : Array<Int>)[54] += 43

        <!UNRESOLVED_REFERENCE!>this[54]<!> = 34
    }
}

fun Array<Int>.checkThis() {
    this[45] = 34
    this[352]++
    this[35] += 234
}

abstract class Ab {
    abstract fun getArray() : Array<Int>
}
